--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
     <div class="centered gridContainer" id="gridContainer">
         <div id="grid" class="grid"></div>
     </div>
-    <div class="centered">
+    <div id="quickEditButtons" class="centered">
         <button id="shuffleBtn" class="buttons fontButtons buttonsRow1">Shuffle</button>
         <button id="resetBtn" class="buttons fontButtons buttonsRow1">Reset</button>
         <button id="randomizeBtn" class="buttons fontButtons buttonsRow1">Randomize</button>
     </div>
 
     <div class="centered">
-        <button id="playBtn" class="buttons fontButtons buttonsRow2">Play Puzzle</button>
+        <button id="playBtn" class="buttons fontButtons buttonsRow2">Solve Myself</button>
+        <button id="editStartBtn" class="buttons fontButtons buttonsRow2">Edit Start</button>
         <button id="editGoalBtn" class="buttons fontButtons buttonsRow2"">Edit Goal</button>
-        </div>
+    </div>
 
 
         <div class=" centered">
-            <button id="solveBtn" class="buttons fontButtons buttonsRow3">Solve</button>
+            <button id="solveBtn" class="buttons fontButtons buttonsRow3">Solve for me</button>
             <select class="algorithmsDropdown" name="algorithms" id="algorithmsDropdown">
                 <option value="Strategic">Strategically</option>
                 <option value="IDA*">IDA*</option>
