rename to strategicAlgorithm, clean empty style attributes

--- a/public/index.html
+++ b/public/index.html
@@ -71,17 +71,17 @@
                 </button>
                 <button id="toggleNumbersBtn" class="buttons svgButtons buttonsRow1">
                     <svg id="hideNumberSvg" viewBox="0 0 256 256">
-                        <rect width="380.221" height="381.956" fill="none" x="-63.329" y="-35.778" style=""/>
-                        <rect width="220.948" height="203.71" fill="none" x="8.909" y="57.166" style=""/>
-                        <polyline points="91.35 69.146 129.737 24.908 129.737 222.058" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14" style=""/>
-                        <polyline points="182.805 224.062 77.751 224.577" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14" style=""/>
-                        <path d="M 127.586 121.195 L 245.041 4.374 L 253.11 12.396 L 135.655 129.218 L 251.806 246.036 L 245.041 254.062 L 127.586 137.24 L 10.128 254.062 L 2.06 246.036 L 119.515 129.218 L 2.06 12.396 L 10.128 4.374 L 127.586 121.195 Z" style=""/>
+                        <rect width="380.221" height="381.956" fill="none" x="-63.329" y="-35.778""/>
+                        <rect width="220.948" height="203.71" fill="none" x="8.909" y="57.166"/>
+                        <polyline points="91.35 69.146 129.737 24.908 129.737 222.058" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14"/>
+                        <polyline points="182.805 224.062 77.751 224.577" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14"/>
+                        <path d="M 127.586 121.195 L 245.041 4.374 L 253.11 12.396 L 135.655 129.218 L 251.806 246.036 L 245.041 254.062 L 127.586 137.24 L 10.128 254.062 L 2.06 246.036 L 119.515 129.218 L 2.06 12.396 L 10.128 4.374 L 127.586 121.195 Z"/>
                     </svg>
                     <svg id="showNumberSvg" viewBox="0 0 256 256" style="display: none;">
-                        <rect width="380.221" height="381.956" fill="none" x="-63.329" y="-35.778" style=""/>
-                        <rect width="220.948" height="203.71" fill="none" x="8.909" y="57.166" style=""/>
-                        <polyline points="91.35 69.146 129.737 24.908 129.737 222.058" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14" style=""/>
-                        <polyline points="182.805 224.062 77.751 224.577" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14" style=""/>
+                        <rect width="380.221" height="381.956" fill="none" x="-63.329" y="-35.778"/>
+                        <rect width="220.948" height="203.71" fill="none" x="8.909" y="57.166"/>
+                        <polyline points="91.35 69.146 129.737 24.908 129.737 222.058" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14"/>
+                        <polyline points="182.805 224.062 77.751 224.577" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14"/>
                     </svg>
                 </button>
                 <button id="flipPuzzleHorizontalBtn" class="buttons svgButtons buttonsRow2">
